# dashboards

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md  index.html.j2  opencode.json  skills-lock.json
.agents/skills/marimo-notebook/: SKILL.md
.agents/skills/marimo-notebook/references/: ANYWIDGET.md  EXPORTS.md  REACTIVITY.md  WATCHING.md
.agents/skills/openaire-oaipmh/: SKILL.md
.agents/skills/ori-ducklake/: SKILL.md
.agents/skills/ori-ducklake/references/: connection.md  patterns.md  schemas.md
.agents/skills/urn-nbn/: SKILL.md
.claude/skills/marimo-notebook/references/: DEPLOYMENT.md  PYTEST.md  SQL.md  STATE.md  TOP-LEVEL-IMPORTS.md  UI.md
.github/: README.md
.github/scripts/: build.py
mcp-servers/ori-ducklake-mcp/: README.md  pyproject.toml
mcp-servers/ori-ducklake-mcp/src/ori_ducklake_mcp/: server.py
notebooks/cris-repository-overview/: metadata.json  notebook.py
notebooks/doa-journals/: notebook.py
notebooks/orcid-monitor/: metadata.json  notebook.py
notebooks/ori-data-quality/: metadata.json  notebook.py
notebooks/repository-status/: notebook.py
notebooks/sprouts-overview/: metadata.json  notebook.py
