[project]
name = "ori-ducklake-mcp"
version = "0.1.0"
description = "MCP server for querying a DuckLake v1.0 catalog via DuckDB."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Maurice Vanderfeesten (SURF)" }]
license = { text = "EUPL-1.2" }
dependencies = [
    "duckdb>=1.5.2",
    "mcp>=1.2.0",
    "pytz",
]

[project.scripts]
ori-ducklake-mcp = "ori_ducklake_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ori_ducklake_mcp"]
